Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56140

Cannot run Qt Quick Controls 2 application on monitor with resolution 800x600.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.7.0, 5.8.0 RC

      This is reproducible with Qt5(Qt5.7.0, Qt Quick Controls 2 Application) on Linux.
      How to reproduce:
      1. Create new project (Qt Quick Controls 2 Application)
      2. Build project.
      3. Set the resolution to 800x600 on your monitor.
      4. Start the application.
      What happens:
      1. No window appears.
      2. Output:

      output in terminal:
      QML debugging is enabled. Only use this in a safe environment.
      QXcbConnection: XCB error: 2 (BadValue), sequence: 460, resource id: 0, major code: 1 (CreateWindow), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 461, resource id: 31457289, major code: 2 (ChangeWindowAttributes), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 462, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 463, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 464, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 466, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 467, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 468, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 472, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 476, resource id: 31457289, major code: 2 (ChangeWindowAttributes), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 477, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 480, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 481, resource id: 31457289, major code: 20 (GetProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 485, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 486, resource id: 31457289, major code: 19 (DeleteProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 487, resource id: 31457289, major code: 20 (GetProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 488, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 489, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 490, resource id: 31457289, major code: 20 (GetProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 491, resource id: 31457289, major code: 18 (ChangeProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 492, resource id: 31457289, major code: 20 (GetProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 493, resource id: 31457289, major code: 19 (DeleteProperty), minor code: 0
      QXcbConnection: XCB error: 3 (BadWindow), sequence: 494, resource id: 31457289, major code: 8 (MapWindow), minor code: 0
      The program has unexpectedly finished.
      

      This issue not reproduced if I delete next line of code:

       QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling); 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jturcott Jocelyn Turcotte
            kulinich Михаил Кулинцев
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes